Continuing on BasicModelSimulation implementation