@@ -19,9 +19,7 @@ public class BasicModelSimulationRunner {
 
     // Constants
     private static final int START = 0;
-    private static final int STOP = 86400;
     private static final long SEED = 123456789L;
-    private static double sarrival;
 
 
     public void runBasicModelSimulation() {
@@ -36,7 +34,7 @@ public class BasicModelSimulationRunner {
         for (int i = 0; i < 150; i++) {
 
             boolean stopArrivals = false;
-            sarrival = START;
+            double sarrival = START;
             long number = 1;
 
             rngs.plantSeeds(seeds[i]);
@@ -46,13 +44,14 @@ public class BasicModelSimulationRunner {
             msqTime.current = START;
             List<MsqEvent> events = new ArrayList<>();
 
+            LuggageChecks luggageChecks = new LuggageChecks(rngs, sarrival);
+
             //generating first arrival
-            double time = getArrival(rngs);
+            double time = luggageChecks.getArrival();
             events.add(new MsqEvent(time, true, EventType.ARRIVAL_LUGGAGE_CHECK));
 
             //TODO DEFINE CENTER_INDEX VARIABLES IN ALL CENTERS SO THAT WE HAVE NO COLLISIONS
             //creation of centers
-            LuggageChecks luggageChecks = new LuggageChecks(rngs);
             CheckInDesksTarget checkInDesksTarget = new CheckInDesksTarget(rngs);
             CheckInDesksOthers checkInDesksOthers = new CheckInDesksOthers(rngs);
             BoardingPassScanners boardingPassScanners = new BoardingPassScanners(rngs);
@@ -61,117 +60,100 @@ public class BasicModelSimulationRunner {
             StampsCheck stampsCheck = new StampsCheck(rngs);
             Boarding boardingTarget = new Boarding(rngs);
 
+            MsqEvent event;
 
-            while(!stopArrivals && number != 0) {
+            while(!luggageChecks.isEndOfArrivals() && number != 0) {
 
+                event = getNextEvent(events);
+                msqTime.next = event.time;
 
-                //TODO: aggiungere i vari processamenti
+                // TODO calcolare integrali INTERNAMENTE AD OGNI CENTRO
 
-                //TODO: aggiornare la variabile number come la somma dei number dei vari centri
-            }
+                // Advancing the clock
+                msqTime.current = msqTime.next;
 
-        }
-
-    }
-
-    private MsqEvent getNextEvent(List<MsqEvent> events){
-
-        if (events == null || events.isEmpty()) {
-            return null; // or throw an exception depending on your use case
-        }
-
-        MsqEvent minEvent = events.get(0);
-
-        for (MsqEvent event : events) {
-            if (event.getTime() > minEvent.getTime()) {
-                if (event.type.ordinal() == minEvent.type.ordinal()) {
-                    if (event.hasPriority && !minEvent.hasPriority) {
-                        minEvent = event;
-                    }
+                switch (event.type) {
+                    case ARRIVAL_LUGGAGE_CHECK:
+                        luggageChecks.processArrival(event, msqTime, events);
+                        break;
+                    case LUGGAGE_CHECK_DONE:
+                        luggageChecks.processCompletion(event, msqTime, events);
+                        break;
+                    case ARRIVAL_CHECK_IN_TARGET:
+                        checkInDesksTarget.processArrival(event, msqTime, events);
+                        break;
+                    case CHECK_IN_TARGET_DONE:
+                        checkInDesksTarget.processCompletion(event, msqTime, events);
+                        break;
+                    case ARRIVAL_CHECK_IN_OTHERS:
+                        checkInDesksOthers.processArrival(event, msqTime, events);
+                        break;
+                    case CHECK_IN_OTHERS_DONE:
+                        checkInDesksOthers.processCompletion(event, msqTime, events);
+                        break;
+                    case ARRIVAL_BOARDING_PASS:
+                        boardingTarget.processArrival(event, msqTime, events);
+                        break;
+                    case BOARDING_PASS_DONE:
+                        boardingPassScanners.processCompletion(event, msqTime, events);
+                        break;
+                    case ARRIVAL_SECURITY_CHECK:
+                        securityChecks.processArrival(event, msqTime, events);
+                        break;
+                    case SECURITY_CHECK_DONE:
+                        securityChecks.processCompletion(event, msqTime, events);
+                        break;
+                    case ARRIVAL_PASSPORT_CHECK:
+                        passportChecks.processArrival(event, msqTime, events);
+                        break;
+                    case PASSPORT_CHECK_DONE:
+                        passportChecks.processCompletion(event, msqTime, events);
+                        break;
+                    case ARRIVAL_STAMP_CHECK:
+                        stampsCheck.processArrival(event, msqTime, events);
+                        break;
+                    case STAMP_CHECK_DONE:
+                        stampsCheck.processCompletion(event, msqTime, events);
+                        break;
+                    case ARRIVAL_BOARDING:
+                        boardingTarget.processArrival(event, msqTime, events);
+                        break;
+                    case BOARDING_DONE:
+                        boardingTarget.processArrival(event, msqTime, events);
+                        break;
                 }
-                break; // Since the list is sorted by time, no need to check further
-            } else if (event.getTime() == minEvent.getTime() && event.type.ordinal() < minEvent.type.ordinal()) {
-                minEvent = event;
-            }
-        }
 
-        return minEvent;
+                number = luggageChecks.getNumberOfJobsInNode() + checkInDesksTarget.getNumberOfJobsInNode() + checkInDesksOthers.getNumberOfJobsInNode() + boardingTarget.getNumberOfJobsInNode()
+                + boardingPassScanners.getNumberOfJobsInNode() + securityChecks.getNumberOfJobsInNode() + passportChecks.getNumberOfJobsInNode() + stampsCheck.getNumberOfJobsInNode() + boardingTarget.getNumberOfJobsInNode();
+
+            }
+
+        }
 
     }
 
     private MsqEvent getNextEvent(List<MsqEvent> events) {
-        if (events == null || events.isEmpty()) {
-            return null; // or throw an exception depending on your use case
-        }
-
-        //take the event with nearest deadline
-        MsqEvent minEvent = events.get(0);
-
-        for (MsqEvent event : events) {
-            if (event.time <= minEvent.time && event.type.ordinal() < minEvent.type.ordinal()) {
-                minEvent = event;
-            } else if (event.type.ordinal() == minEvent.type.ordinal()) {
-                if (event.time <= minEvent.time && event.hasPriority && !minEvent.hasPriority) {
-                    minEvent = event;
-                } else if (event.hasPriority == minEvent.hasPriority) {
-                    if (event.getTime() < minEvent.getTime()) {
-                        minEvent = event;
-                    }
-                }
-            }
-        }
-
-        return minEvent;
-    }
-
-
-    private MsqEvent getNextEvent(List<MsqEvent> events){
-
-        if (events == null || events.isEmpty()) {
-            return null; // or throw an exception depending on your use case
-        }
-
-        MsqEvent minEvent = events.get(0);
-
-        for (MsqEvent event : events) {
-            if (event.getTime() > minEvent.getTime()) {
-                break; // Since the list is sorted by time, no need to check further
-            } else if (event.getTime() == minEvent.getTime() && event.type.ordinal() < minEvent.type.ordinal()) {
-                minEvent = event;
-            } else if (event.type.ordinal() == minEvent.type.ordinal() && event.getTime() == minEvent.getTime()
-                    && event.hasPriority && !minEvent.hasPriority) {
-                minEvent = event;
-            }
-        }
-
-        return minEvent;
-
-    }
-
-
-    // AGGIUNTA
-    private MsqEvent getNextEventWithPriority(List<MsqEvent> events){
 
         if (events == null || events.isEmpty()) {
             return null; // or throw an exception depending on your use case
         }
 
         List<MsqEvent> eventsWithPriority = new ArrayList<>(events);
-        eventsWithPriority.removeIf(event -> event.hasPriority == false);
+        eventsWithPriority.removeIf(event -> !event.hasPriority);
         eventsWithPriority.sort(Comparator.comparing(MsqEvent::getTime));
-        MsqEvent minEventPrio = eventsWithPriority.get(0);
+        MsqEvent minEventPrio = eventsWithPriority.getFirst();
 
         List<MsqEvent> eventsWithoutPriority = new ArrayList<>(events);
-        eventsWithoutPriority.removeIf(event -> event.hasPriority == true);
+        eventsWithoutPriority.removeIf(event -> event.hasPriority);
         eventsWithoutPriority.sort(Comparator.comparing(MsqEvent::getTime));
-        MsqEvent minEvent = eventsWithoutPriority.get(0);
+        MsqEvent minEvent = eventsWithoutPriority.getFirst();
 
         // minEventPrio has the lowest time of all events
-        if(minEventPrio.time < minEvent.time){
+        if (minEventPrio.time < minEvent.time) {
             minEvent = minEventPrio;
 
             // minEventPrio has the same time of other events (but they have equal or following type)
-        } else if(minEventPrio.time == minEvent.time && minEventPrio.type.ordinal() <= minEvent.type.ordinal()){
+        } else if (minEventPrio.time == minEvent.time && minEventPrio.type.ordinal() <= minEvent.type.ordinal()) {
             minEvent = minEventPrio;
         }
         // minEventPrio has the same time of other events but they have prior type so they need to be processed before
@@ -191,25 +173,6 @@ public class BasicModelSimulationRunner {
 
         return minEvent;
 
-    }
-
-
-    double exponential(double m, Rngs r) {
-        /* ---------------------------------------------------
-         * generate an Exponential random variate, use m > 0.0
-         * ---------------------------------------------------
-         */
-        return (-m * Math.log(1.0 - r.random()));
-    }
-
-    double getArrival(Rngs r) {
-        /* --------------------------------------------------------------
-         * generate the next arrival time, with rate 1/2
-         * --------------------------------------------------------------
-         */
-        r.selectStream(0);
-        sarrival += exponential(2.0, r);
-        return (sarrival);
     }
 
 }
